# scraping-agent

./: .gitignore
agent/: pyproject.toml
agent/alembic/: env.py
agent/alembic/versions/: 2615c4ae2283_add_normalized_output_column_to_agents_.py  342907a9ebc9_add_scrape_tables.py  3fa528cf3632_add_agent_runs_tools_used.py  d4a3ff63f2bd_add_agents_table.py  ea8d16081701_add_agent_runs_table.py
agent/src/: config.py  database.py  dependencies.py  logging.py  main.py  models.py  utils.py
agent/src/agents/: dependencies.py  router.py  schemas.py
agent/src/agents/services/: agent_query_service.py
agent/src/jobs_agent/: seed_jobs_agent.py
agent/src/orchestrator/: __init__.py  client.py  constants.py  dependencies.py  router.py  schemas.py  service.py
agent/src/repositories/: __init__.py  agent_run_tools_repository.py  agent_runs_repository.py  agents_repository.py
agent/src/scrapling_agent/: client.py  constants.py  dependencies.py  router.py  seed_scraping_agent.py
agent/src/scrapling_agent/services/: scrappling_service.py
agent/src/services/: __init__.py  dependencies.py  run_tracking_service.py
agent/src/settings/: db_connection.py  groq.py  ollama.py
ui/: .env.example  README.md  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/api/agent/health/: route.ts
ui/app/api/agent/run/: route.ts
ui/app/api/agents/: route.ts
ui/app/run-agent/: page.module.css  page.tsx
ui/lib/: agentApi.ts
